--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -3,10 +3,11 @@
 name: Backend CI - Test, Build and Push Images to ACR
 
 on:
-  #manual trigger
-  workflow_dispatch:
-
   workflow_call:
+    inputs:
+      IMAGE_TAG:
+        required: true
+        type: string
     secrets:
       AZURE_CONTAINER_REGISTRY:
         required: true
@@ -143,17 +144,17 @@ jobs:
 
     - name: Build and Push Customer Service Image
       run: |
-        docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}/week10_customer_service:latest ./backend/customer_service/
+        docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azure.io/week10_customer_service:${{ inputs.IMAGE_TAG }} ./backend/customer_service/
         docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}/week10_customer_service:latest
     
     - name: Build and Push Product Service Image
       run: |
-        docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}/week10_product_service:latest ./backend/product_service/
+        docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azure.io/week10_product_service:${{ inputs.IMAGE_TAG }} ./backend/product_service/
         docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}/week10_product_service:latest
 
     - name: Build and Push Order Service Image
       run: |
-        docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}/week10_order_service:latest ./backend/order_service/
+        docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}.azure.io/week10_order_service:${{ inputs.IMAGE_TAG }} ./backend/order_service/
         docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}/week10_order_service:latest 
     
     - name: Logout from Azure
