--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -28,7 +28,7 @@ jobs:
   test_and_push_backend:
     uses: ./.github/workflows/backend_ci.yml
     with:
-      IMAGE_TAG: ${{ IMAGE_TAG }}
+      IMAGE_TAG: ${{ env.IMAGE_TAG }}
     secrets:
       AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
