--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -25,10 +25,20 @@ env:
   LOCATION: eastus
 
 jobs:
+  set_image_tag:
+    runs-on: ubuntu-latest
+    outputs:
+      IMAGE_TAG: ${{ steps.set_tag.outputs.IMAGE_TAG }}
+    steps:
+      - name: Set IMAGE_TAG
+        id: set_tag
+        run: echo "IMAGE_TAG=${GITHUB_SHA}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
+  
   test_and_push_backend:
+    needs: set_image_tag
     uses: ./.github/workflows/backend_ci.yml
     with:
-      IMAGE_TAG: ${{ env.IMAGE_TAG }}
+      IMAGE_TAG: ${{ needs.set_image_tag.outputs.IMAGE_TAG }}
     secrets:
       AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
