--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -18,7 +18,6 @@ on:
   workflow_dispatch:
 
 env: 
-  IMAGE_TAG: ${{ github.sha }}-${{ github.run_id }}
   RESOURCE_GROUP: 'week10-rg-aprylle'
   STAGING_STORAGE_NAME: 'aprylletempstorage'
   AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
@@ -32,11 +31,20 @@ jobs:
     steps:
       - name: Set IMAGE_TAG
         id: set_tag
-        run: echo "IMAGE_TAG=${GITHUB_SHA}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
+        run: echo "IMAGE_TAG=${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
   
   test_and_push_backend:
     needs: set_image_tag
     uses: ./.github/workflows/backend_ci.yml
+    with:
+      IMAGE_TAG: ${{ needs.set_image_tag.outputs.IMAGE_TAG }}
+    secrets:
+      AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+
+  push_frontend:
+    needs: [test_and_push_backend, set_image_tag]
+    uses: ./.github/workflows/frontend_ci.yml
     with:
       IMAGE_TAG: ${{ needs.set_image_tag.outputs.IMAGE_TAG }}
     secrets:
