fix: included frontend image push to pr staging

--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -9,6 +9,7 @@ on:
     inputs:
       IMAGE_TAG:
         required: true
+        type: string
     secrets:
       AZURE_CONTAINER_REGISTRY:
         required: true
