--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -28,13 +28,16 @@ jobs:
   set_image_tag:
     runs-on: ubuntu-latest
     outputs:
-      IMAGE_TAG: ${{ steps.set_tag.outputs.IMAGE_TAG }}
+      IMAGE_TAG: ${{ steps.set_image_tag.outputs.IMAGE_TAG }}
+      STORAGE_TAG: ${{ steps.set_storage_tag.outputs.IMAGE_TAG }}
     steps:
       - name: Set IMAGE_TAG
-        id: set_tag
-        run: |
-          echo "IMAGE_TAG=${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
-          echo "STORAGE_TAG=${GITHUB_SHA::7}${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
+        id: set_image_tag
+        run: echo "IMAGE_TAG=${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
+      
+      - name: Set STORAGE_TAG
+        id: set_storage_tag
+        run: echo "STORAGE_TAG=${GITHUB_SHA::7}${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
   
   # Runs lint and tests for backend and pushes backend images to repository
   test_and_push_backend:
@@ -56,6 +59,7 @@ jobs:
       AZURE_CONTAINER_REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
 
+  # Dynamically creates AKS namespace + Azure Storage Account for Staging Environment
   create_staging_environment:
     needs: 
       - test_and_push_backend
@@ -91,3 +95,16 @@ jobs:
 
     - name: Logout from Azure
       run: az logout
+  
+  deploy_staging_backend:
+    needs:
+      - create_staging_environment
+    uses: ./.github/workflows/backend_cd.yml
+    with:
+      aks_cluster_name: ${{ env.AZURE_CLUSTER_NAME }}
+      aks_resource_group: ${{ env.RESOURCE_GROUP }}
+      aks_acr_name: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
+      aks_storage_name: st${{ needs.set_image_tag.outputs.STORAGE_TAG }}
+      aks_namespace: staging-${{ needs.set_image_tag.outputs.IMAGE_TAG }}
+    secrets:
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
