--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -103,7 +103,7 @@ jobs:
     with:
       aks_cluster_name: 'week10-aks-aprylle'
       aks_resource_group: 'week10-rg-aprylle'
-      aks_storage_name: st${{ needs.set_image_tag.outputs.STORAGE_TAG }}
-      aks_namespace: staging-${{ needs.set_image_tag.outputs.IMAGE_TAG }}
+      aks_storage_name: "st${{ needs.set_image_tag.outputs.STORAGE_TAG }}"
+      aks_namespace: "staging-${{ needs.set_image_tag.outputs.IMAGE_TAG }}"
     secrets:
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
