--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -108,7 +108,7 @@ jobs:
     with:
       aks_cluster_name: 'week10-aks-aprylle'
       aks_resource_group: 'week10-rg-aprylle'
-      aks_storage_name: '${{ needs.set_image_tag.outputs.STORAGE_TAG }}'
-      aks_namespace: '${{ needs.set_image_tag.outputs.STAGING_TAG }}'
+      aks_storage_name: ${{ needs.set_image_tag.outputs.STORAGE_TAG }}
+      aks_namespace: ${{ needs.set_image_tag.outputs.STAGING_TAG }}
     secrets:
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
