--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Set IMAGE_TAG
         id: set_image_tag
         run: echo "IMAGE_TAG=${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
-        
+
       - name: Set STAGING_TAG
         id: set_staging_tag
         run: echo "STAGING_TAG=staging-${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
@@ -97,5 +97,6 @@ jobs:
       aks_resource_group: 'week10-rg-aprylle'
       aks_storage_name: 'apryllestagingstorage'
       aks_namespace: ${{ needs.set_image_tag.outputs.STAGING_TAG }}
+      image_tag: ${{ needs.set_image_tag.outputs.IMAGE_TAG }}
     secrets:
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
