--- a/k8s/customer-service.yaml
+++ b/k8s/customer-service.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: customer-service-container
-        image: sit722devopsacraprylle.azurecr.io/week10_customer_service:latest
+        image: sit722devopsacraprylle.azurecr.io/week10_customer_service:_IMAGE_TAG_
         imagePullPolicy: Always
         ports:
         - containerPort: 8002
