--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: frontend-container
-        image: sit722devopsacraprylle.azurecr.io/week10_frontend:_IMAGE_TAG_
+        image: "sit722devopsacraprylle.azurecr.io/week10_frontend:_IMAGE_TAG_"
         imagePullPolicy: Always
         ports:
         - containerPort: 80
