--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -26,18 +26,7 @@ env:
 jobs:
   # Outputs immutable image tags
   set_image_tag:
-    runs-on: ubuntu-latest
-    outputs:
-      IMAGE_TAG: ${{ steps.set_image_tag.outputs.IMAGE_TAG }}
-      STAGING_TAG: ${{ steps.set_staging_tag.outputs.STAGING_TAG }}
-    steps:
-      - name: Set IMAGE_TAG
-        id: set_image_tag
-        run: echo "IMAGE_TAG=${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
-
-      - name: Set STAGING_TAG
-        id: set_staging_tag
-        run: echo "STAGING_TAG=staging-${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
+    uses: ./.github/workflows/image_tag.yml
   
   # Runs lint and tests for backend and pushes backend images to repository
   test_and_push_backend:
