--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -26,7 +26,18 @@ env:
 jobs:
   # Outputs immutable image tags
   set_image_tag:
-    uses: ./.github/workflows/image_tag.yml
+    runs-on: ubuntu-latest
+    outputs:
+      IMAGE_TAG: ${{ steps.set_image_tag.outputs.IMAGE_TAG }}
+      STAGING_TAG: ${{ steps.set_staging_tag.outputs.STAGING_TAG }}
+    steps:
+      - name: Set IMAGE_TAG
+        id: set_image_tag
+        run: echo "IMAGE_TAG=${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
+
+      - name: Set STAGING_TAG
+        id: set_staging_tag
+        run: echo "STAGING_TAG=staging-${GITHUB_SHA::7}-${GITHUB_RUN_ID}" >> $GITHUB_OUTPUT
   
   # Runs lint and tests for backend and pushes backend images to repository
   test_and_push_backend:
@@ -80,6 +91,7 @@ jobs:
   deploy_staging_backend:
     needs:
       - create_staging_environment
+      - set_image_tag
     uses: ./.github/workflows/backend_cd.yml
     with:
       aks_cluster_name: 'week10-aks-aprylle'
