update: created image_tag workflow

--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -51,7 +51,8 @@ jobs:
 
   # Pushes frontend image to repository
   push_frontend:
-    needs: [test_and_push_backend, set_image_tag]
+    needs:
+      - set_image_tag
     uses: ./.github/workflows/frontend_ci.yml
     with:
       IMAGE_TAG: ${{ needs.set_image_tag.outputs.IMAGE_TAG }}
@@ -101,3 +102,19 @@ jobs:
       image_tag: ${{ needs.set_image_tag.outputs.IMAGE_TAG }}
     secrets:
       AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+  
+  deploy_staging_frontend:
+    needs:
+      - deploy_staging_backend
+      - set_image_tag
+    with: 
+      product_api_ip: ${{ needs.deploy_backend.outputs.PRODUCT_API_IP }}
+      order_api_ip: ${{ needs.deploy_backend.outputs.ORDER_API_IP }}
+      customer_api_ip: ${{ needs.deploy_backend.outputs.CUSTOMER_API_IP }}
+      aks_cluster_name: 'week10-aks-aprylle'
+      aks_resource_group: 'week10-rg-aprylle'
+      aks_namespace: ${{ needs.set_image_tag.outputs.STAGING_TAG }}
+      image_tag: ${{ needs.set_image_tag.outputs.IMAGE_TAG }}
+    secrets:
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      AZURE_CONTAINER_REGISTRY: $ {{ secres.AZURE_CONTAINER_REGISTRY }}
