--- a/.github/workflows/frontend_cd.yml
+++ b/.github/workflows/frontend_cd.yml
@@ -25,6 +25,9 @@ on:
       aks_namespace:
         required: true
         type: string
+      image_tag:
+        required: true
+        type: string
     secrets:
       AZURE_CREDENTIALS:
         required: true
