--- a/.github/workflows/frontend_cd.yml
+++ b/.github/workflows/frontend_cd.yml
@@ -54,6 +54,7 @@ jobs:
       - name: Login to Azure Container Registry
         run: az acr login --name ${{ secrets.AZURE_CONTAINER_REGISTRY }}
 
+      # Inject Backend IPs to Frontend main.js
       - name: Inject Backend IPs into Frontend main.js
         run: |
           echo "Injecting IPs into frontend/static/js/main.js"
@@ -66,12 +67,17 @@ jobs:
           echo "--- Modified main.js content ---"
           cat frontend/main.js
           echo "---------------------------------"
-
+      
+      # Inject Image Tags into Manifest Files
+      - name: Inject Image Tag Into Manifest Files
+        run: |
+            sed -i "s|_IMAGE_TAG_|${{ inputs.image_tag }}|g" k8s/frontend.yaml
+      
       # Build and Push Docker image for Frontend
       - name: Build and Push Frontend Image
         run: |
-          docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}/week10_frontend:latest ./frontend/
-          docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}/week10_frontend:latest
+          docker build -t ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/week10_frontend:${{ inputs.image_tag }} ./frontend/
+          docker push ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/week10_frontend:${{ inputs.image_tag }}
 
       - name: Set Kubernetes context (get AKS credentials)
         uses: azure/aks-set-context@v3
@@ -81,7 +87,7 @@ jobs:
 
       - name: Deploy Frontend to AKS
         run: |
-          echo "Deploying frontend with latest tag to AKS cluster: ${{ inputs.aks_cluster_name }}"
+          echo "Deploying frontend with immutable image tag to AKS cluster: ${{ inputs.aks_cluster_name }}"
           cd k8s/
           # Ensure frontend-service.yaml is configured with your ACR
           kubectl apply -f frontend.yaml --namespace=${{ inputs.aks_namespace }}
