--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -131,6 +131,7 @@ jobs:
     needs:
       - set_image_tag
     runs-on: ubuntu-latest
+    uses: actions/checkout@v4
     steps:
       - name: Print Image Name on PR Comment
         run: |
