--- a/.github/workflows/pr_staging.yml
+++ b/.github/workflows/pr_staging.yml
@@ -131,7 +131,8 @@ jobs:
     needs:
       - set_image_tag
     runs-on: ubuntu-latest
-
+    permissions:
+      pull_requests: write
     steps:
       - uses: actions/checkout@v4
       - name: Print Image Name on PR Comment
